fetch data when load

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <title>IP Address Tracker</title>
   </head>
   <body>
+    <div class="titles">
+      <p class="ip"></p>
+      <p class="city"></p>
+      <p class="timezone"></p>
+      <p class="isp"></p>
+    </div>
+
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
